# wallpaper-imgui

./: .gitattributes  CMakeLists.txt  imgui.ini  wallhaven-kx98xd.jpgZone.Identifier
include/: config.h  config_components.h
include/smily/: auto.h  smily.h
lib/: freetype.lib  glfw3.lib
pyscript/: build.py  tempCodeRunnerFile.py
src/imgui/: imgui_demo.cpp
src/linux/: Shader.h  glad.c  glad.cpp  main.cpp  xxxx.cpp
src/linux/shaders/: fragment.txt  vertex.txt
src/win/: ffplay.cpp  main.cpp
temp/: 1.cpp  2.cpp  3.h  linux.cpp  windows.cpp
